--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -14,3 +14,18 @@ a {
     color: aquamarine;
     font-size: 16px;
 }
+
+h2 {
+    font-weight: 300;
+    font-size: 42px;
+}
+
+p {
+    font-size: 21px;
+    color: gray;
+}
+
+.copyright {
+    color: gray;
+    text-align: right;
+}
